--- a/cosmetics-inventory-system/.gitignore
+++ b/cosmetics-inventory-system/.gitignore
@@ -1,17 +1,18 @@
 # Dependency directories
 /node_modules
-/client/node_modules
-/server/node_modules
+/backend/node_modules
+/cosmetics-inventory-system/node_modules
 
 # Build folders
 /build
-/client/build
+/backend/build
+/cosmetics-inventory-system/build
 
 # Environment variables (SECURITY!)
 .env
 .env.local
-/client/.env
-/server/.env
+/backend/.env
+/cosmetics-inventory-system/.env
 
 # Log files
 npm-debug.log*
